--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "lucide-react": "^0.555.0",
     "next": "^16.0.7",
     "next-themes": "^0.4.6",
+    "openai": "^6.10.0",
     "postgres": "^3.4.7",
     "react": "^19.2.1",
     "react-dom": "^19.2.1",
